--- a/app/Resources/views/layout/footer.html.twig
+++ b/app/Resources/views/layout/footer.html.twig
@@ -104,7 +104,11 @@
                                     <span>➊ Bảng giá sửa nhà trọn gói tại TP HCM</span>
                                 </a>
                             </h6>
-                            <meta content="2021-01-01T4:00" itemprop="startDate">
+                            <meta content="2021-01-01T4:00-05:00" itemprop="startDate">
+                            <meta content="2022-01-01T4:00-05:00" itemprop="endDate">
+                            <meta content="https://schema.org/OnlineEventAttendanceMode" itemprop="eventAttendanceMode">
+                            <meta content="https://schema.org/EventScheduled" itemprop="eventStatus">
+                            <meta content="{{ asset('assets/images/logo.png') }}" itemprop="image">
                             <div itemprop="location" itemscope itemtype="http://schema.org/Place">
                                 <meta content="☎️ Báo Giá 0982.969.379" itemprop="name">
                                 <div itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
@@ -113,6 +117,20 @@
                                     <meta content="VN" itemprop="addressRegion">
                                     <meta content="70000" itemprop="postalCode">
                                 </div>
+                            </div>
+                            <div itemprop="offers" itemscope itemtype="http://schema.org/Offer">
+                                <meta content="{{ path('news_show', {'slug': 'bao-gia-sua-nha-tron-goi' }) }}" itemprop="url">
+                                <meta content="0" itemprop="price">
+                                <meta content="VND" itemprop="priceCurrency">
+                                <meta content="https://schema.org/InStock" itemprop="availability">
+                                <meta content="2021-01-01T4:00" itemprop="validFrom">
+                            </div>
+                            <div itemprop="performer" itemscope itemtype="http://schema.org/Person">
+                                <meta content="Xây Dựng Minh Duy" itemprop="name">
+                            </div>
+                            <div itemprop="organizer" itemscope itemtype="http://schema.org/Organization">
+                                <meta content="Xây Dựng Minh Duy" itemprop="name">
+                                <meta content="https://xaydungminhduy.com/" itemprop="url">
                             </div>
                         </div>
                         <div class="event-footer-item" itemtype="http://schema.org/Event" itemscope="">
@@ -123,7 +141,11 @@
                                     <span>➋ Bảng giá xây nhà trọn gói tại TP HCM</span>
                                 </a>
                             </h6>
-                            <meta content="2021-02-02T5:00" itemprop="startDate">
+                            <meta content="2021-02-02T5:00-05:00" itemprop="startDate">
+                            <meta content="2022-02-02T5:00-05:00" itemprop="endDate">
+                            <meta content="https://schema.org/OnlineEventAttendanceMode" itemprop="eventAttendanceMode">
+                            <meta content="https://schema.org/EventScheduled" itemprop="eventStatus">
+                            <meta content="{{ asset('assets/images/logo.png') }}" itemprop="image">
                             <div itemprop="location" itemscope itemtype="http://schema.org/Place">
                                 <meta content="☎️ Báo Giá 0982.969.379" itemprop="name">
                                 <div itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
@@ -132,6 +154,20 @@
                                     <meta content="VN" itemprop="addressRegion">
                                     <meta content="70000" itemprop="postalCode">
                                 </div>
+                            </div>
+                            <div itemprop="offers" itemscope itemtype="http://schema.org/Offer">
+                                <meta content="{{ path('news_show', {'slug': 'bao-gia-xay-nha-tron-goi' }) }}" itemprop="url">
+                                <meta content="4300000" itemprop="price">
+                                <meta content="VND" itemprop="priceCurrency">
+                                <meta content="https://schema.org/InStock" itemprop="availability">
+                                <meta content="2021-02-02T5:00" itemprop="validFrom">
+                            </div>
+                            <div itemprop="performer" itemscope itemtype="http://schema.org/Person">
+                                <meta content="Xây Dựng Minh Duy" itemprop="name">
+                            </div>
+                            <div itemprop="organizer" itemscope itemtype="http://schema.org/Organization">
+                                <meta content="Xây Dựng Minh Duy" itemprop="name">
+                                <meta content="https://xaydungminhduy.com/" itemprop="url">
                             </div>
                         </div>
                         <div class="event-footer-item" itemtype="http://schema.org/Event" itemscope="">
@@ -142,7 +178,11 @@
                                     <span>➌ Dịch vụ xây nhà trọn gói tại TP HCM</span>
                                 </a>
                             </h6>
-                            <meta content="2021-03-03T6:00" itemprop="startDate">
+                            <meta content="2021-03-03T6:00-05:00" itemprop="startDate">
+                            <meta content="2022-03-03T6:00-05:00" itemprop="endDate">
+                            <meta content="https://schema.org/OnlineEventAttendanceMode" itemprop="eventAttendanceMode">
+                            <meta content="https://schema.org/EventScheduled" itemprop="eventStatus">
+                            <meta content="{{ asset('assets/images/logo.png') }}" itemprop="image">
                             <div itemprop="location" itemscope itemtype="http://schema.org/Place">
                                 <meta content="☎️ Báo Giá 0982.969.379" itemprop="name">
                                 <div itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
@@ -151,6 +191,20 @@
                                     <meta content="VN" itemprop="addressRegion">
                                     <meta content="70000" itemprop="postalCode">
                                 </div>
+                            </div>
+                            <div itemprop="offers" itemscope itemtype="http://schema.org/Offer">
+                                <meta content="{{ path('news_show', {'slug': 'xay-nha-tron-goi' }) }}" itemprop="url">
+                                <meta content="4300000" itemprop="price">
+                                <meta content="VND" itemprop="priceCurrency">
+                                <meta content="https://schema.org/InStock" itemprop="availability">
+                                <meta content="2021-03-03T6:00" itemprop="validFrom">
+                            </div>
+                            <div itemprop="performer" itemscope itemtype="http://schema.org/Person">
+                                <meta content="Xây Dựng Minh Duy" itemprop="name">
+                            </div>
+                            <div itemprop="organizer" itemscope itemtype="http://schema.org/Organization">
+                                <meta content="Xây Dựng Minh Duy" itemprop="name">
+                                <meta content="https://xaydungminhduy.com/" itemprop="url">
                             </div>
                         </div>
                     </div>
