--- a/app/Resources/views/news/recent.html.twig
+++ b/app/Resources/views/news/recent.html.twig
@@ -30,8 +30,9 @@
         <a href="{{ path('news_show', {'slug': row.getUrl() }) }}" class="list-group-item td-list-group-item" title="{{ row.getTitle() }}">
             <img
                 class="lazyload"
-                alt="{{ row.getTitle() }}"
-                data-src="{{ (vich_uploader_asset(row, 'imageFile') ? vich_uploader_asset(row, 'imageFile') : asset('assets/images/no-image.png')) | imagine_filter('news_70_50') }}" />
+                src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
+                data-src="{{ (vich_uploader_asset(row, 'imageFile') ? vich_uploader_asset(row, 'imageFile') : asset('assets/images/no-image.png')) | imagine_filter('news_70_50') }}"
+                alt="{{ row.getTitle() }}" />
             <span>{{ row.getTitle() }}</span>
         </a>
     {% endfor %}
