--- a/web/assets/scss/front/pages/_homepage.scss
+++ b/web/assets/scss/front/pages/_homepage.scss
@@ -231,6 +231,7 @@
 
         .news-item-wrapper {
             border: 1px solid $black;
+            display: block;
 
             &:hover {
                 border: 1px solid $primaryColor2;
@@ -254,7 +255,8 @@
             }
 
             .media-thumb {
-                display: block;
+                display: inline-block;
+                width: 100%;
                 height: 220px;
                 overflow: hidden;
                 position: relative;
@@ -319,7 +321,13 @@
             }
     
             .media-body {
-                padding: 10px;
+                display: inline-block;
+                width: 100%;
+                padding: 0 10px 10px 10px;
+
+                @media only screen and (max-width: 767.98px) {
+                    padding: 10px;
+                }
 
                 h5 {
                     font-size: 20px;
@@ -330,23 +338,28 @@
 
                     @media only screen and (max-width: 767.98px) {
                         min-height: auto;
+                        font-size: 22px;
                     }
     
                     a {
+                        color: $primaryColor;
+                        font-family: $robotoCondesed;
+                        font-weight: 500;
+                        line-height: 26px;
+                        max-height: 50px;
                         overflow: hidden;
                         text-overflow: ellipsis;
                         display: -webkit-box;
-                        line-height: 26px;
-                        max-height: 50px;
                         -webkit-line-clamp: 2;
                         -webkit-box-orient: vertical;
-                        color: $primaryColor2;
-                        font-family: $robotoCondesed;
-                        font-weight: 500;
-                        text-transform: uppercase;
 
                         &:hover {
                             text-decoration: none;
+                            color: $primaryColor2;
+                        }
+
+                        @media only screen and (max-width: 767.98px) {
+                            max-height: 55px;
                         }
                     }
                 }
@@ -357,6 +370,15 @@
                     padding: 5px 0;
                     line-height: 26px;
                     text-align: center;
+                    overflow: hidden;
+                    text-overflow: ellipsis;
+                    display: -webkit-box;
+                    -webkit-line-clamp: 3;
+                    -webkit-box-orient: vertical;
+
+                    @media only screen and (max-width: 767.98px) {
+                        font-size: 17px;
+                    }
                 }
             }
         }
