--- a/app/Resources/views/layout/footer.html.twig
+++ b/app/Resources/views/layout/footer.html.twig
@@ -44,11 +44,11 @@
                         <span>0982.969.379</span>
                     </li>
                     <li>
-                        <i class="fa fa-envelope-o"></i>
+                        <i class="fas fa-envelope"></i>
                         <span>xaydungminhduy@gmail.com</span>
                     </li>
                     <li>
-                        <i class="fa fa-internet-explorer"></i>
+                        <i class="fab fa-internet-explorer"></i>
                         <span>www.xaydungminhduy.com</span>
                     </li>
                 </ul>
@@ -71,27 +71,27 @@
                 <h3 class="text-uppercase">Mạng xã hội</h3>
                 <span class="td-social-icon-wrap">
                     <a target="_blank" href="{{ get_setting('linkToFacebook') }}" title="Sửa Nhà Minh Duy trên Facebook">
-                        <i class="fa fa-facebook"></i>
+                        <i class="fab fa-facebook-f"></i>
                     </a>
                 </span>
                 <span class="td-social-icon-wrap">
                     <a target="_blank" href="{{ get_setting('linkToGooglePlus') }}" title="Sửa Nhà Minh Duy trên Google plus">
-                        <i class="fa fa-google-plus"></i>
+                        <i class="fab fa-google-plus"></i>
                     </a>
                 </span>
                 <span class="td-social-icon-wrap">
                     <a target="_blank" href="{{ get_setting('linkToTwitter') }}" title="Sửa Nhà Minh Duy trên Twitter">
-                        <i class="fa fa-twitter"></i>
+                        <i class="fab fa-twitter"></i>
                     </a>
                 </span>
                 <span class="td-social-icon-wrap">
                     <a target="_blank" href="{{ get_setting('linkToYoutube') }}" title="Sửa Nhà Minh Duy trên Youtube">
-                        <i class="fa fa-youtube"></i>
+                        <i class="fab fa-youtube"></i>
                     </a>
                 </span>
                 <span class="td-social-icon-wrap">
                     <a target="_blank" href="{{ get_setting('linkToLinkedin') }}" title="Sửa Nhà Minh Duy trên Linkedin">
-                        <i class="fa fa-linkedin"></i>
+                        <i class="fab fa-linkedin-in"></i>
                     </a>
                 </span>
                 <div class="event-footer row">
