--- a/app/Resources/views/layout/header.html.twig
+++ b/app/Resources/views/layout/header.html.twig
@@ -17,16 +17,19 @@
                         <a href="mailto:xaydungminhduy@gmail.com">xaydungminhduy@gmail.com</a>
                     </span>
                     <a target="_blank" href="{{ get_setting('linkToFacebook') }}" title="Xây Dựng Minh Duy trên Facebook">
-                        <i class="fa fa-facebook"></i>
+                        <i class="fab fa-facebook"></i>
                     </a>
                     <a target="_blank" href="{{ get_setting('linkToTwitter') }}" title="Xây Dựng Minh Duy trên Twitter">
-                        <i class="fa fa-twitter"></i>
+                        <i class="fab fa-twitter"></i>
                     </a>
                     <a target="_blank" href="{{ get_setting('linkToYoutube') }}" title="Xây Dựng Minh Duy trên Youtube">
-                        <i class="fa fa-youtube"></i>
+                        <i class="fab fa-youtube"></i>
                     </a>
                     <a target="_blank" href="{{ get_setting('linkToLinkedin') }}" title="Xây Dựng Minh Duy trên Linkedin">
-                        <i class="fa fa-linkedin"></i>
+                        <i class="fab fa-linkedin"></i>
+                    </a>
+                    <a target="_blank" href="{{ get_setting('linkToGooglePlus') }}" title="Xây Dựng Minh Duy trên Google Plus">
+                        <i class="fab fa-google-plus"></i>
                     </a>
                 </div>
             </div>
