--- a/app/Resources/views/contact/index.html.twig
+++ b/app/Resources/views/contact/index.html.twig
@@ -32,11 +32,11 @@
                             <span><strong>0982.969.379 A Minh</strong></span>
                         </li>
                         <li>
-                            <i class="fa fa-envelope-o"></i>
+                            <i class="fas fa-envelope"></i>
                             <span><strong>xaydungminhduy@gmail.com</strong></span>
                         </li>
                         <li>
-                            <i class="fa fa-internet-explorer"></i>
+                            <i class="fab fa-internet-explorer"></i>
                             <span><strong>www.xaydungminhduy.com</strong></span>
                         </li>
                     </ul>
