--- a/app/Resources/views/homepage/index.html.twig
+++ b/app/Resources/views/homepage/index.html.twig
@@ -152,7 +152,7 @@
                     <div class="col-md-4 col-sm-6">
                         <div class="media">
                             <div class="media-left">
-                                <span><i class="fa fa-lightbulb-o"></i></span>
+                                <span><i class="fa fa-lightbulb"></i></span>
                             </div>
                             <div class="media-body">
                                 <h2 class="media-heading text-uppercase">Sáng tạo trong thiết kế</h2>
