--- a/web/assets/scss/front/app.scss
+++ b/web/assets/scss/front/app.scss
@@ -6,13 +6,11 @@ $web-font-path: 'data:text/css;base64,';
 @import "~bootswatch/flatly/variables";
 @import "~bootstrap-sass/assets/stylesheets/bootstrap";
 @import "~bootswatch/flatly/bootswatch";
-@import "~font-awesome/scss/font-awesome.scss";
-@import "~highlight.js/styles/solarized-light.css";
 
 @import '~bxslider/dist/jquery.bxslider.css';
 @import '~@fancyapps/fancybox/dist/jquery.fancybox.css';
 @import '../../libs/starrating/css/rating.css';
-@import "~@fortawesome/fontawesome-free/css/all.css";
+@import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-2/css/all.min.css');
 
 @import "global/fonts";
 @import "global/color_variables";
