--- a/app/Resources/views/layout/hotline.html.twig
+++ b/app/Resources/views/layout/hotline.html.twig
@@ -1,22 +1,5 @@
-<div class="td-scroll-up go-to-top td-scroll-up-visible hidden">
-    <i class="fa fa-chevron-up"></i>
+<div class="hotline">
+    <div class="inner">
+        <a href="tel:0982969379"><div class="phonering-alo-ph-img-circle"></div>0982.96.93.79</a>
+    </div>
 </div>
-
-<aside class="floating container hidden-sm hidden-md hidden-lg">
-    <section class="row inside cover">
-        <a class="call-now col-xs-6" href="tel:0982969379" title="Hotline: 0982969379">
-            <div>
-                <i class="fas fa-mobile-alt"></i>
-                <span>Hotline</span>
-                <strong>0982.969.379</strong>
-            </div>
-        </a>
-        <a class="chat-us col-xs-6" href="mailto:xaydungminhduy@gmail.com">
-            <div>
-                <i class="far fa-envelope"></i>
-                <span>Gửi yêu cầu</span>
-                <strong>báo giá</strong>
-            </div>
-        </a>
-    </section>
-</aside>
