--- a/web/assets/scss/front/amp.scss
+++ b/web/assets/scss/front/amp.scss
@@ -296,10 +296,12 @@ article {
     .article-content {
         h2 {
             font-size: 28px;
+            margin-bottom: 18px;
         }
 
         h3 {
             font-size: 24px;
+            margin-bottom: 18px;
         }
 
         ol,
