--- a/web/assets/scss/front/global/_hotline.scss
+++ b/web/assets/scss/front/global/_hotline.scss
@@ -71,15 +71,169 @@
 #fb-root > div.fb_dialog.fb_dialog_advanced.fb_customer_chat_bubble_animated_no_badge {
     bottom: 90px !important;
 }
+
 #fb-root > div.fb_dialog.fb_dialog_mobile.fb_customer_chat_bubble_animated_no_badge {
     bottom: 120px!important;
     right: 10px !important;
 }
-.fb-customerchat.fb_invisible_flow.fb_iframe_widget iframe {
-    bottom: 160px !important;
+
+.hotline {
+    position: fixed;
+    bottom: 80px;
+    right: 25px;
+    text-align: center;
+    background-color: $white;
+    color: $white;
+    z-index: 100;
+    font-family: $robotoCondesed;
+    font-size: 20px;
+    text-transform: uppercase;
+    padding: 0px;
+    font-weight: bold;
+    border-radius: 30px;
 
     @media only screen and (max-width: 767.98px) {
-        bottom: 180px !important;
-        right: 0px !important;
+        right: 10px;
+        bottom: 118px;
+    }
+
+    .inner > a {
+        display: inline-block;
+        font-size: 21px;
+        font-weight: 700;
+        color: $primaryColor;
+        background: url(../../../images/icon-phone.png) no-repeat 17px center;
+        background-size: 25px;
+        position: relative;
+        border: 1px solid $primaryColor2;
+        border-radius: 40px;
+        padding: 6px 19px 6px 50px;
+        -webkit-background-clip: text;
+        -webkit-animation: color-change 1s infinite;
+        -moz-animation: color-change 1s infinite;
+        -o-animation: color-change 1s infinite;
+        -ms-animation: color-change 1s infinite;
+        animation: color-change 1s infinite;
+
+        .phonering-alo-ph-img-circle {
+            width: 25px;
+            height: 25px;
+            top: 11px;
+            left: 16px;
+            position: absolute;
+            background: url(../../../images/icon-phone.png) no-repeat 0px center;
+            -webkit-animation: phonering-alo-circle-img-anim 1s infinite ease-in-out;
+            animation: phonering-alo-circle-img-anim 1s infinite ease-in-out;
+            -webkit-transform-origin: 50% 50%;
+            -ms-transform-origin: 50% 50%;
+            transform-origin: 50% 50%;
+            background-size: 25px;
+        }
+    }
+}
+
+@-webkit-keyframes phonering-alo-circle-anim {
+    0% {
+        -webkit-transform:rotate(0) scale(.5) skew(1deg);
+        -webkit-opacity:.1
+    }
+
+    30% {
+        -webkit-transform:rotate(0) scale(.7) skew(1deg);
+        -webkit-opacity:.5
+    }
+
+    100% {
+        -webkit-transform:rotate(0) scale(1) skew(1deg);
+        -webkit-opacity:.1
+    }
+}
+
+@-webkit-keyframes phonering-alo-circle-fill-anim {
+    0% {
+        -webkit-transform:rotate(0) scale(.7) skew(1deg);
+        opacity:.2
+    }
+
+    50% {
+        -webkit-transform:rotate(0) scale(1) skew(1deg);
+        opacity:.2
+    }
+
+    100% {
+        -webkit-transform:rotate(0) scale(.7) skew(1deg);
+        opacity:.2
+    }
+}
+
+@-webkit-keyframes phonering-alo-circle-img-anim {
+    0% {
+        -webkit-transform:rotate(0) scale(1) skew(1deg)
+    }
+
+    10% {
+        -webkit-transform:rotate(-25deg) scale(1) skew(1deg)
+    }
+
+    20% {
+        -webkit-transform:rotate(25deg) scale(1) skew(1deg)
+    }
+
+    30% {
+        -webkit-transform:rotate(-25deg) scale(1) skew(1deg)
+    }
+
+    40% {
+        -webkit-transform:rotate(25deg) scale(1) skew(1deg)
+    }
+
+    50% {
+        -webkit-transform:rotate(0) scale(1) skew(1deg)
+    }
+
+    100% {
+        -webkit-transform:rotate(0) scale(1) skew(1deg)
+    }
+}
+
+.giuseart-pc-contact-bar {
+    left: 10px;
+    bottom: 45%;
+    position: fixed;
+    z-index: 100;
+    margin-bottom: 0;
+    padding-left: 0;
+
+    @media only screen and (max-width: 767.98px) {
+        left: unset;
+        right: 10px;
+    }
+
+    li {
+        width: 50px;
+        height: 46px;
+        overflow: hidden;
+        margin-bottom: 0;
+        list-style: none;
+    }
+
+    li a {
+        display: block;
+        width: 50px;
+        height: 45px;
+    }
+
+    li.facebook {
+        margin-bottom: 8px;
+        background: url(../../../images/fb.png);
+        background-size: 50px;
+        background-repeat: no-repeat;
+    }
+
+    li.zalo {
+        background: url(../../../images/zl.png);
+        background-position: 7px 5px;
+        background-size: 38px;
+        background-repeat: no-repeat;
     }
 }
